--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,13 @@
-spring.application.name=backend
+spring.application.name=Webstaurator
+
+spring.datasource.url=jdbc:postgresql://195.150.230.208:5432/2023_urban_grzegorz
+spring.datasource.username=2023_urban_grzegorz
+spring.datasource.password=35240
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.default_schema=webstaurator
+spring.jpa.open-in-view=false
+
+spring.web.resources.static-locations=classpath:/public/
+
+server.port=${PORT:8080}
