--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.properties.hibernate.default_schema=webstaurator
 spring.jpa.open-in-view=false
 
 server.port=${PORT:8080}
+
+jwt.expiration=900000
+
