--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.application.name=Webstaurator
 spring.datasource.url=jdbc:postgresql://195.150.230.208:5432/2023_urban_grzegorz
 spring.datasource.username=2023_urban_grzegorz
 spring.datasource.password=35240
+spring.datasource.hikari.max-lifetime=300000
+
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.default_schema=webstaurator
