Changed cors, add forwarding payU payment

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -14,3 +14,8 @@ server.port=${PORT:8080}
 
 jwt.expiration=900000
 
+payu.client.id=485725
+payu.client.secret=0d35725950bdfbb77ee5d67f6779a8f9
+payu.api.url=https://secure.payu.com/api/v2_1
+payu.api.token=3e5cac39-7e38-4139-8fd6-30adc06a61bd
+
