--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -128,6 +128,10 @@
 			<version>4.0.20</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-cache</artifactId>
+		</dependency>
 
     </dependencies>
 
