--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -33,3 +33,5 @@ spring.mail.properties.mail.smtp.from=Webstaurator@xn--kork-py-jpb.pl
 
 logging.level.org.springframework.mail=DEBUG
 logging.level.org.springframework.mail.javamail=DEBUG
+
+spring.cache.type=simple
