--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -33,3 +33,13 @@ spring.mail.properties.mail.smtp.from=Webstaurator@xn--kork-py-jpb.pl
 
 logging.level.org.springframework.mail=DEBUG
 logging.level.org.springframework.mail.javamail=DEBUG
+
+spring.security.oauth2.client.registration.google.client-id=60311597492-dt96aq7n1qjk8c1uit3r74pi4h76t9sa.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.scope=profile,email
+spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
+
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/v2/auth
+spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+spring.security.oauth2.client.provider.google.user-info-uri=https://openidconnect.googleapis.com/v1/userinfo
