--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.hikari.max-lifetime=300000
 
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.default_schema=webstaurator
+spring.jpa.properties.hibernate.default_schema=webs
 spring.jpa.open-in-view=false
 
 server.port=${PORT:8080}
