--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.properties.hibernate.default_schema=webstaurator
 spring.jpa.open-in-view=false
 
 #172.20.10.2
-server.address=192.168.0.31
+#server.address=192.168.0.31
 server.port=${PORT:8080}
 
 jwt.expiration=900000
