--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,10 +1,7 @@
 spring.application.name=Webstaurator
 
-spring.datasource.url=jdbc:postgresql://195.150.230.208:5432/2023_urban_grzegorz
-spring.datasource.username=2023_urban_grzegorz
-spring.datasource.password=35240
-spring.datasource.hikari.max-lifetime=300000
 
+spring.datasource.hikari.max-lifetime=300000
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.default_schema=webstaurator
@@ -15,6 +12,7 @@ spring.jpa.open-in-view=false
 server.port=${PORT:8080}
 
 jwt.expiration=900000
+jwt.secret=bXlTdXBlclNlY3VyZVNlY3JldEtleUZvckpXVFRva2VuR2VuZXJhdGlvbg==
 
 payu.client.id=485725
 payu.client.secret=0d35725950bdfbb77ee5d67f6779a8f9
