Changed Jwt config

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -14,7 +14,9 @@ spring.jpa.open-in-view=false
 #server.address=192.168.0.122
 server.port=${PORT:8080}
 
-jwt.expiration=900000
+jwt.expiration=86400000
+jwt.shortExpiration=900000
+jwt.secret=bXlTdXBlclNlY3VyZVNlY3JldEtleUZvckpXVFRva2VuR2VuZXJhdGlvbg==
 
 payu.client.id=485725
 payu.client.secret=0d35725950bdfbb77ee5d67f6779a8f9
