--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -163,6 +163,16 @@
 			<version>5.5.0</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-database-postgresql</artifactId>
+			<version>10.15.0</version> <!-- Use the latest available version -->
+		</dependency>
+
 	</dependencies>
 
 	<build>
