--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,13 +1,18 @@
 spring.application.name=Webstaurator
 
-spring.datasource.url=jdbc:postgresql://195.150.230.208:5432/2023_urban_grzegorz
-spring.datasource.username=2023_urban_grzegorz
-spring.datasource.password=35240
+#spring.datasource.url=jdbc:postgresql://195.150.230.208:5432/2023_urban_grzegorz
+#spring.datasource.username=2023_urban_grzegorz
+#spring.datasource.password=35240
 spring.datasource.hikari.max-lifetime=300000
 
+
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
+
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.default_schema=webstaurator
-spring.jpa.open-in-view=false
+spring.jpa.database=postgresql
+spring.jpa.open-in-view=true
+
 
 #172.20.10.2
 #server.address=192.168.0.122
