--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -1,6 +1,9 @@
 server {
-    listen 80;
-    server_name localhost;
+    listen 80 default_server;
+    server_name _;
+
+    root /usr/share/nginx/html/dist/frontend/browser;
+    index index.html;
 
     location /api {
         rewrite ^/api/?(.*)$ /$1 break;
@@ -13,10 +16,7 @@ server {
     }
 
     location / {
-        proxy_pass http://frontend:4200;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
+        try_files $uri $uri/ /index.html;
     }
 
 }
