--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.jpa.open-in-view=true
 spring.datasource.hikari.max-lifetime=300000
 
 server.port=${PORT:8080}
+app.frontend-url=http://localhost
 
 jwt.expiration=86400000
 jwt.shortExpiration=900000
