--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
     ports:
       - "80:80"
     volumes:
+      - ./frontend/dist:/usr/share/nginx/html/dist:ro
       - ./gateway/nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - frontend
