--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,8 +4,17 @@ WORKDIR /app
 
 COPY package*.json ./
 
-RUN npm install --legacy-peer-deps
+RUN npm install
 
 COPY . .
+RUN npm run build
 
-CMD [ "npm", "run", "start", "--", "--host", "0.0.0.0" ]
+FROM node:22-alpine
+
+WORKDIR /app
+
+COPY --from=build /app/dist/frontend/browser ./dist
+
+RUN npm install -g serve
+
+CMD ["serve", "-s", "dist", "-l", "3000"]
