Fixed map and changed to angular dev

--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -1,9 +1,6 @@
 server {
-    listen 80 default_server;
-    server_name _;
-
-    root /usr/share/nginx/html/dist/frontend/browser;
-    index index.html;
+    listen 80;
+    server_name localhost;
 
     location /api {
         rewrite ^/api/?(.*)$ /$1 break;
@@ -16,8 +13,11 @@ server {
     }
 
     location / {
-        try_files $uri $uri/ /index.html;
+        proxy_pass http://frontend:4200;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
     }
-
 }
 
