--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   frontend:
     build: ./frontend
+    ports:
+      - "4200:4200"
     volumes:
       - ./frontend/:/app
       - /app/node_modules
@@ -34,7 +36,6 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./frontend/dist:/usr/share/nginx/html/dist:ro
       - ./gateway/nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - frontend
