--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,14 +7,5 @@ COPY package*.json ./
 RUN npm install
 
 COPY . .
-RUN npm run build
 
-FROM node:22-alpine
-
-WORKDIR /app
-
-COPY --from=build /app/dist/frontend/browser ./dist
-
-RUN npm install -g serve
-
-CMD ["serve", "-s", "dist", "-l", "3000"]
+CMD [ "npm", "run", "start", "--", "--host", "0.0.0.0" ]
