refactor: update API endpoints, table names, and services to use pluralized RESTful conventions
- Changed backend API endpoints and entity/table names to plural forms for consistency (e.g., /api/menus, /api/orders, /api/restaurants)
- Updated Angular services and frontend API calls to match new backend routes
- Refactored SQL schema to use pluralized table names and updated foreign key references
- Improved email configuration: added MailConfig, updated EmailService, and switched to maildev for local development
- Adjusted nginx config for CORS and maildev service in docker-compose
- Cleaned up SSR-related config and scripts from Angular setup
- Minor fixes to Google OAuth redirect and async email sending

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -18,20 +18,17 @@ jwt.secret=bXlTdXBlclNlY3VyZVNlY3JldEtleUZvckpXVFRva2VuR2VuZXJhdGlvbg==
 payu.client.id=485725
 payu.client.secret=0d35725950bdfbb77ee5d67f6779a8f9
 
-spring.mail.host=live.smtp.mailtrap.io
-spring.mail.port=587
-spring.mail.username=api
-spring.mail.password=5fbc80f01f9da4d5281b0a7776713a24
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.from=Webstaurator@xn--kork-py-jpb.pl
+spring.mail.host=mail-dev
+spring.mail.port=1025
+spring.mail.username=gosqu
+spring.mail.password=gosqu
 
 logging.level.org.springframework.mail=DEBUG
 logging.level.org.springframework.mail.javamail=DEBUG
 
 spring.security.oauth2.client.registration.google.client-id=60311597492-dt96aq7n1qjk8c1uit3r74pi4h76t9sa.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
-spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost/api/login/oauth2/code/google
 spring.security.oauth2.client.registration.google.scope=profile,email
 spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
 
