--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -170,7 +170,7 @@
 		<dependency>
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-database-postgresql</artifactId>
-			<version>10.15.0</version> <!-- Use the latest available version -->
+			<version>10.15.0</version>
 		</dependency>
 
 	</dependencies>
