--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,12 @@
 services:
   frontend:
     build: ./frontend
-    ports:
-      - "4200:4200"
     volumes:
       - ./frontend/:/app
       - /app/node_modules
 
   backend:
     build: ./backend
-    ports:
-      - "8080:8080"
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://${SURVEY_DB_HOST}:${SURVEY_DB_PORT}/${SURVEY_DB_NAME}
       - SPRING_DATASOURCE_USERNAME=${SURVEY_DB_USERNAME}
@@ -29,6 +25,13 @@ services:
       - POSTGRES_DB=${SURVEY_DB_NAME}
     volumes:
       - db_data:/var/lib/postgresql/data
+
+  mail-dev:
+    image: maildev/maildev
+    container_name: webs-mail
+    ports:
+      - "1080:1080"
+      - "1025:1025"
 
   gateway:
     restart: always
