--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:frontend": "node dist/frontend/server/server.mjs"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
@@ -21,9 +20,7 @@
     "@angular/material": "^19.0.3",
     "@angular/platform-browser": "^19.2.10",
     "@angular/platform-browser-dynamic": "^19.2.10",
-    "@angular/platform-server": "^19.2.10",
     "@angular/router": "^19.2.10",
-    "@angular/ssr": "^19.2.11",
     "@types/leaflet": "^1.9.14",
     "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
