--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -5,6 +5,13 @@ server {
     location /api {
         rewrite ^/api/?(.*)$ /$1 break;
         proxy_pass http://backend:8080;
+        add_header 'Access-Control-Allow-Origin' $http_origin always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type' always;
+        if ($request_method = 'OPTIONS') {
+            return 204;
+        }
     }
 
     location /img {
